# aoc-machine

./: .gitignore  README.md  aoc  main.py  pyproject.toml  setup
src/: __init__.py  curl.py  parse_puzzle.py
src/__pycache__/: curl.cpython-313.pyc.orig
