[project]
name = "aoc-machine"
version = "0.1.0"
description = "advent of code puzzle getter"
authors = [
    {name = "timmPrice",email = "timmPrice6@gmail.com"}
]
packages = [{ include = "src"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
